# xianyu-mcp

./: .env.example  .gitignore  .mcp.json  README.md  config.json  docker-compose.yml  opencode.json  pyproject.toml  requirements.txt  run-mcp-native.sh
.claude/: CLAUDE.md
docker/: Dockerfile  README.md  __init__.py  browser.Dockerfile  mcp-base.Dockerfile  start-browser-pool.sh  start_browser_pool.py
docs/: api-protocol.md  claude-code-setup.md  mcp-dev-cheatsheet.md  mcp-e2e-regression.md  opencode-setup.md  skills-setup.md
mcp_server/: __init__.py  http_server.py  server.py
package/: package.json
scripts/: mcp-dev
src/: __init__.py  browser.py  browser_debugger.py  browser_pool.py  core.py  formatter.py  http_search.py  keepalive.py  multi_user_manager.py  multi_user_registry.py  page_coordinator.py  search_api.py  session.py  settings.py
tests/: conftest.py  test_browser.py  test_browser_debugger.py  test_browser_image_build.py  test_browser_pool_script.py  test_core.py  test_core_task_pages.py  test_formatter.py  test_http_mcp.py  test_http_search_unit.py  test_http_server_multi_user.py  test_http_server_multi_user_auth.py  test_http_server_unit.py  test_keepalive.py  test_mcp_dev_cli.py  test_multi_user_end_to_end_smoke.py  test_multi_user_keepalive.py  test_multi_user_manager.py  test_multi_user_operations.py  test_multi_user_registry.py  test_multi_user_runtime_integration.py  test_multi_user_settings.py  test_page_coordinator.py  test_page_isolation.py  test_publish_page_readiness.py  test_r2_uploader.py  test_search_api.py  test_session.py  (+3 more)
(+48 files in other folders)
