[project]
name = "xianyu-assistant"
version = "0.1.0"
description = "闲鱼助手 - 自动化搜索和发布工具"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-html>=4.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "browser: marks tests requiring browser",
    "api: marks tests requiring API",
    "integration: marks integration tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
